Remove banner, add some submission information content.

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -653,7 +653,7 @@ dt {
 header {
   padding: 25px 20px 40px 20px;
   margin: 0;
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   right: 0;
